--- a/style.css
+++ b/style.css
@@ -47,11 +47,15 @@ a{
 }
 .dark-btn {
     background-color: #000000;
-    width: 50px;
+    padding: 10px 20px;
     height: 50px;
     position: fixed;
     top: 20px;
     right: 20px;
+    cursor: pointer;
+}
+.dark-btn h1 {
+    color: #fff;
 }
 .toggle {
     width: 80px;
